# simplex-basic

./: README.md  simplex-basic.cabal
src/: Tests.hs
src/Linear/Simplex/: Basic.hs  Primal.hs
src/Linear/Simplex/Basic/: Internal.hs  Types.hs
src/Linear/Simplex/Primal/: Types.hs
test/Linear/Simplex/: BasicSpec.hs  PrimalSpec.hs
test/Linear/Simplex/BasicSpec/: Types.hs
test/Linear/Simplex/PrimalSpec/: Types.hs
