Name:                   simplex-basic
Version:                0.0.0.1
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Textbook primal simplex implementation.
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Linear.Simplex.Basic
                        Linear.Simplex.Basic.Types
  Build-Depends:        base >= 4.6 && < 5
                      , linear-grammar >= 0.0.1.5
                      , mtl
                      , transformers
                      , bifunctors
                      , QuickCheck

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , linear-grammar >= 0.0.1.5
                      , hspec
                      , QuickCheck
                      , mtl
                      , transformers
                      , bifunctors

Source-Repository head
  Type:                 git
--  Location:
